@@ -1,1 +1,1 @@
-define ALPHA 4
+define ALPHA 
