@@ -18,14 +18,16 @@ TIFF Software
 <B>Latest Software</B>: <A HREF="v3.5.4.html">v3.5.4</A><BR>
 <B>Master FTP Site</B>: <A HREF="ftp://ftp.onshore.com/pub/libtiff">ftp.onshore.com</A> , directory pub/libtiff (Active mode FTP only!)<BR>
 <B>HTTP Download</B>: <A HREF=http://www.libtiff.org/tiff-v3.5.4.tar.gz>http://www.libtiff.org/tiff-v3.5.4.tar.gz</a>,  <A HREF=http://www.libtiff.org/tiff-v3.5.4.zip>http://www.libtiff.org/tiff-v3.5.4.zip</a><BR> 
+<B>LZW Compression Kit:</B> <A HREF="libtiff-lzw-compression-kit.tar.gz">libtiff-lzw-compression-kit</A><BR>
 <B>Mailing List</B>: <a href=mailto:tiff@olympiakos.com>tiff@olympiakos.com</a> <BR>
 <B>Mailing List Subscription</b>: <a href=mailto:tiff-request@olympiakos.com>tiff-request@olympiakos.com</a> ("subscribe tiff" in body of message). <BR>
 <B>Mailing List Archive</b>: <A HREF= http://www.remotesensing.org/lists/libtiff_archive/maillist.html>http://www.remotesensing.org/lists/libtiff_archive/maillist.html</A>  <BR>
-<B>Anon CVS</B>:<pre>
+<B>Anonymous CVS</B>:<pre>
         export CVSROOT=:pserver:anonymous@remotesensing.org:/cvsroot
         cvs login # use password "anonymous" 
         cvs checkout libtiff
-</pre> 
+        cvs checkout libtiff-lzw-compression-kit
+</pre>
 <br> 
 
 <P>
