@@ -1,8 +1,16 @@
+Mon Dec 27 12:13:39 EST 1999  Mike Welles <mike@onshore.com> 
+
+	* Created lzw compression kit, as a new module (libtiff-lzw-compression-kit). 
+
+	* Altered descriptions in tools to reflect "by default" lzw not supported
+
+	* Updated index.html to note lzw compression kit. 
+	
 Tue Dec 21 14:01:51 1999  Frank Warmerdam  <warmerda@gdal.velocet.ca>
 
 	* Added fax3sm_winnt.c to distribution list in Makefile.in. 
 
-Tue Dec 21 11:04:45 EST 1999  Mike Welles <mike@onshore.com> 
+Tue Dec 21 11:04:45 EST 1999  Mike Welles <mike@onshore.com> ***3.5.4 release***
 	
 	* Aadded Pixar tag support.  Contributed by Phil Beffery <phil@pixar.com> 
 
